--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="navbar navbar-dark bg-dark">
       <div class="container">
-        <div class="navbar-brand">
+        <div class="navbar-brand" id="home">
           <header>
             <h1>Bruno Neves</h1>
           </header>
@@ -112,30 +112,37 @@
 
     <!-- NABAR PAGE IN ABOUT -->
     <div class="navigation">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-sm-6">
-            <header class="justify-content-center text-white">
-              <div class="row">
-                <div class="col-sm-1"><span>#</span></div>
-                <div class="col-sm-1"><h3>About</h3></div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-6"></div>
-              </div>
-            </header>
+      <div class="navbar navbar-expand-lg bg-dark">
+        <div class="container">
+          <div class="navbar-brand" id="about">
+            <h3>
+              <span class="pound">#</span><span class="letter">A</span>bout
+            </h3>
           </div>
-          <div class="col-sm-6"><ul class="nav justify-content-end">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
+              <a href="#home" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item" id="about">
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">About</a>
+              <a href="#curriculo" class="nav-link">Curriculo</a>
             </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Curriculo</a>
-            </li>
-          </ul></div>
-        </div>       
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- About -->
+    <div class="about-content">
+      <div class="jumbotron text-center bg-white">
+        <div class="container">
+          <header>
+            <h2>About</h2>
+          </header>
+
+        </div>
       </div>
     </div>
   </main>
