--- a/index.html
+++ b/index.html
@@ -136,12 +136,14 @@
 
     <!-- About -->
     <div class="about-content">
-      <div class="jumbotron text-center bg-white">
+      <div class="jumbotron bg-white">
         <div class="container">
-          <header>
+          <header class="text-center">
             <h2>About</h2>
           </header>
-
+        </div>
+        <div class="container-fluid">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, aut maxime libero reprehenderit adipisci praesentium eveniet, iusto unde voluptatem odit quam, facere cum vitae expedita. Minus sint asperiores et? Odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quis, sit veritatis, nobis magni possimus et ipsam quos eum cupiditate molestiae. Adipisci perferendis corrupti laboriosam delectus? Amet nisi odit est!
         </div>
       </div>
     </div>
