--- a/index.html
+++ b/index.html
@@ -140,118 +140,122 @@
         <section>
           <div class="container-fluid">
             <div class="row">
-              <div class="col-sm-12 col-lg-1"></div>
-              <div class="col-sm-12 col-lg-5 ">
-                <article class="text-justify">
-                  <section>
-                    <header class="text-center">
-                     <h4><span><i class="fa fa-user-o"></i></span>Sobre</h4>
-                      <div class="line-about"></div>
-                      
-                    </header>
-                  </section>
-                  <section>
-                   <p>Brasileiro de São Paulo - SP, nasceu em Dezembro/1995 - 26 anos. </p><br>
-                   <p>Em horas vagas, costumo estudar muito desenvolvimento web e programações, estou a todo momento lendo
+              <div class="col-sm-12 col-lg-6 ">
+                <section class="text-justify">
+                  <header class="text-center">
+                    <h4><span><i class="fa fa-user-o"></i></span>Sobre</h4>
+                    <div class="line-about"></div>
+                  </header>
+                </section>
+                <section class="text-justify">
+                  <p>Brasileiro de São Paulo - SP, nasceu em Dezembro/1995 - 26 anos. </p><br>
+                  <p>Em horas vagas, costumo estudar muito desenvolvimento web e programações, estou a todo momento
+                    lendo
                     livros de programações, desenvolvimento web e adoro livros de aventura e ficção.</p> <br>
-                   <p>Como e por que eu escolhi estudar e trabalhar com IT?</p><br>
-                    <p>A escolha desse grande mecardo veio de exemplo do meu pai Gilson Correia, que por muitos anos
+                  <p>Como e por que eu escolhi estudar e trabalhar com IT?</p><br>
+                  <p>A escolha desse grande mecardo veio de exemplo do meu pai Gilson Correia, que por muitos anos
                     trabalhou como Técnico de Infraestrutura, pôde me ensinar os principios básicos da montagem e
                     manuntenção de computadores e redes.</p> <br>
-                   <p>Atualmente ele é um Desenvolvedor FullStack e Programador Sênior, e através dele me senti
+                  <p>Atualmente ele é um Desenvolvedor FullStack e Programador Sênior, e através dele me senti
                     interessado em aprender essa nova área que vem cresendo cada vez mais no mercado.</p> <br>
-                   <p>Atualmente estou me especializando em algumas áreas IT. </p>
-                  </section>
-                </article>
+                  <p>Atualmente estou me especializando em algumas áreas IT. </p>
+                </section>
               </div>
-              <div class="col-sm-12 col-lg-4">
+              <div class="col-sm-12 col-lg-5">
+                <div class="col-sm-12 col-lg-1"></div>
               </div>
-              <div class="col-sm-12 col-lg-1"></div>
             </div>
-
+          </div>
+      </article>
+      <article class="text-justify">
+        <section>
+          <div class="container-fluid">
             <div class="row">
-              <div class="col-sm-12 col-lg-1"></div>
               <div class="col-sm-12 col-lg-5"></div>
-              <div class="col-sm-12 col-lg-5">
-                <article>
-                  <article class="text-justify">
-                    <section>
-                      <header class="text-center">
-                        <h4><span><i class="fa fa-file-text-o"></i></span>Especialização</h4>
-                        <div class="line-about"></div>
-                        <h4></h4>
-                      </header>
-                    </section>
-                    <section class="section-about">
-                      <span class="text-center"><i class="fa fa-arrow-right especializacao"></i> Técnico em Análise e
-                        Desenvolvimento de Sistemas - Universidade FAM | 03/2022 - momento</span>
-                      <p>
-                        O curso superior de Tecnologia em Análise e Desenvolvimento de Sistemas torna o profissional
-                        capacitado para desenvolver sistemas de informação para diversos setores do mercado de trabalho,
-                        sendo o profissional um especialista na criação de sistemas informatizados e diferenciado por
-                        sua criatividade e inovação.
-                      </p>
-                    </section>
-                    <section class="section-about">
-                      <span class="text-center"><i class="fa fa-arrow-right especializacao"></i> Bootcamp Geração Tech
-                        Unimed-BH | FullStack - EAD DIO.ME | 05/2022 - momento</span>
-                      <p>
-                        O Programa Geração Tech Unimed-BH é um programa que oferece bootcamps gratuitos. Nesta
-                        primeira edição, o bootcamp ofertado formará novos desenvolvedores fullstack nas tecnologias
-                        Javascript, MySQL, Angular e .NET. Durante o bootcamp, você irá desenvolver projetos práticos,
-                        participar de mentorias ao vivo e exclusivas, obter seu certificado e ainda complementar seu
-                        portfólio. Ao final do programa, a Unimed-BH espera contratar os melhores perfis para atuar na
-                        região de Belo Horizonte.
-                      </p>
-                    </section>
-                    <section class="section-about">
-                      <span class="text-center"><i class="fa fa-arrow-right especializacao"></i>Desenvolvimento Web
-                        Moderno com JavaScript - Cod3r | Leonardo Leitão - Udemy | 04/2021 - momento</span>
-                      <p>
-                        Desenvolvimento Web Moderno com JavaScript é um curso voltado para todos os tipos de
-                        público: Iniciantes, intermediários e avançados. Um curso de desenvolvimento web zero to hero,
-                        onde você aprende os conceitos básicos de programação, JavaScript, Node.js, Web, ESNext,
-                        HTML5, CSS3, Ajax, Gulp, Webpack, jQuery, Bootsrap, React, VueJS, Angular 9, banco de dados
-                        relacional, banco de dados não relacional.
-                      </p>
-                      <p>
-                        No curso, estou aprendendo a dominar tecnologias de frontend - que é a parte da aplicação executada no
-                        browser do usuário, e tecnologias de backend - que é o código executado no lado do servidor.
-                      </p>
-                      <p>
-                         Estou aprendendo sobre Node, os últimos recursos de HTML e  CSS, Gulp, Webpack, jQuery, Bootstrap, React, Angular, Vue JS, ExpressJS, MySQL, MongoDB e Electron.
-                      </p>
-                    </section>
-                  </article>
+              <div class="col-sm-12 col-lg-1"></div>
+              <div class="col-sm-12 col-lg-6">
+                <section>
+                  <header class="text-center">
+                    <h4><span><i class="fa fa-file-text-o"></i></span>Especialização</h4>
+                    <div class="line-about"></div>
+                    <h4></h4>
+                  </header>
+                </section>
+                <section class="section-about">
+                  <span class="text-center"><i class="fa fa-arrow-right especializacao"></i>Técnico em Análise e
+                    Desenvolvimento de Sistemas - Universidade FAM | 03/2022 - momento</span>
+                  <p>
+                    O curso superior de Tecnologia em Análise e Desenvolvimento de Sistemas torna o profissional
+                    capacitado para desenvolver sistemas de informação para diversos setores do mercado de trabalho,
+                    sendo o profissional um especialista na criação de sistemas informatizados e diferenciado por
+                    sua criatividade e inovação.
+                  </p>
+                </section>
+                <section class="section-about">
+                  <span class="text-center"><i class="fa fa-arrow-right especializacao"></i>Bootcamp Geração Tech
+                    Unimed-BH | FullStack - EAD DIO.ME | 05/2022 - momento</span>
+                  <p>
+                    O Programa Geração Tech Unimed-BH é um programa que oferece bootcamps gratuitos. Nesta
+                    primeira edição, o bootcamp ofertado formará novos desenvolvedores fullstack nas tecnologias
+                    Javascript, MySQL, Angular e .NET. Durante o bootcamp, você irá desenvolver projetos práticos,
+                    participar de mentorias ao vivo e exclusivas, obter seu certificado e ainda complementar seu
+                    portfólio. Ao final do programa, a Unimed-BH espera contratar os melhores perfis para atuar na
+                    região de Belo Horizonte.
+                  </p>
+                </section>
+                <section class="section-about">
+                  <span class="text-center"><i class="fa fa-arrow-right especializacao"></i>Desenvolvimento Web
+                    Moderno com JavaScript - Cod3r | Leonardo Leitão - Udemy | 04/2021 - momento</span>
+                  <p>
+                    Desenvolvimento Web Moderno com JavaScript é um curso voltado para todos os tipos de
+                    público: Iniciantes, intermediários e avançados. Um curso de desenvolvimento web zero to hero,
+                    onde você aprende os conceitos básicos de programação, JavaScript, Node.js, Web, ESNext,
+                    HTML5, CSS3, Ajax, Gulp, Webpack, jQuery, Bootsrap, React, VueJS, Angular 9, banco de dados
+                    relacional, banco de dados não relacional.
+                  </p>
+                  <p>
+                    No curso, estou aprendendo a dominar tecnologias de frontend - que é a parte da aplicação
+                    executada no
+                    browser do usuário, e tecnologias de backend - que é o código executado no lado do servidor.
+                  </p>
+                  <p>
+                    Estou aprendendo sobre Node, os últimos recursos de HTML e CSS, Gulp, Webpack, jQuery, Bootstrap,
+                    React, Angular, Vue JS, ExpressJS, MySQL, MongoDB e Electron.
+                  </p>
+                </section>
               </div>
-              <div class="col-sm-12 col-lg-1"></div>
             </div>
+          </div>
+        </section>
+      </article>
 
+      <article>
+        <section>
+          <div class="container-fluid">
             <div class="row">
-              <div class="col-sm-12 col-lg-1"></div>
-              <div class="col-sm-12 col-lg-5">
-                <article class="text-justify">
-                  <section>
+              <div class="col-sm-12 col-lg-6">
+                <article>
+                  <section class="text-justify section-about">
                     <header class="text-center">
-                      <h4><i class="fa fa-briefcase"></i>Experiências</h4>
+                      <h4><span><i class="fa fa-briefcase"></i></span>EXPERIÊNCIA</h4>
                       <div class="line-about"></div>
                     </header>
                   </section>
-                  <section>
-                    <!-- PAREI AQUI  -->
-                    <h1>CONTINUAR DAQUI BRUNÃO</h1>
+                  <section class="section-about">
+                    <span class="text-center">
+                      <i class="fa fa-check-circle-o especializacao" aria-hidden="true"></i>Colégio CPV - Técnico de
+                      Infraestrutura - 03/2021 - momento
+                    </span>
+                    <p>As Artiv</p>
                   </section>
                 </article>
               </div>
-              <div class="col-sm-12 col-lg-5 text-center">
-                <span></span>
-              </div>
+              <div class="col-sm-12 col-lg-5"></div>
               <div class="col-sm-12 col-lg-1"></div>
             </div>
           </div>
         </section>
       </article>
-    </div>
   </main>
 
 
